fixed ValueError: [E002] Can't find factory for 'curated_transformer' for language English (en). for loading en_core_web_trf

--- a/ads/opctl/operator/lowcode/pii/environment.yaml
+++ b/ads/opctl/operator/lowcode/pii/environment.yaml
@@ -9,8 +9,9 @@ dependencies:
       - datapane
       - gender_guesser
       - nameparser
+      - oracle_ads[opctl]
       - plotly
-      - spacy_transformers
       - scrubadub
       - scrubadub_spacy
-      - oracle_ads[opctl]
+      - spacy-transformers==1.2.5
+      - spacy==3.6.1
