ODSC-48017. ADS release 2.9.0
- fixed typo

--- a/.github/workflows/run-unittests-py38-cov-report.yml
+++ b/.github/workflows/run-unittests-py38-cov-report.yml
@@ -65,7 +65,7 @@ jobs:
       # automlx do not support py3.9 and some versions of py3.10. This step omitted in -py39-py30.yml workflow
       - name: "Install Forecasting dependencies"
         run: |
-          pip install -e ".ads[forecast]"
+          pip install -e ".[forecast]"
 
       - name: "Run unitary tests folder with maximum ADS dependencies"
         timeout-minutes: 60
