--- a/pyproject.toml
+++ b/pyproject.toml
@@ -154,6 +154,13 @@ viz = [
   "seaborn>=0.11.0",
 ]
 forecast = [
+  "conda-pack",
+  "inflection",
+  "nbconvert",
+  "nbformat",
+  "oci-cli",
+  "py-cpuinfo",
+  "rich",
   "autots[additional]",
   "datapane",
   "holidays==0.21.13",
@@ -161,7 +168,7 @@ forecast = [
   "numpy",
   "oci-cli",
   "optuna==2.9.0",
-  "oracle-ads[opctl]",
+  "oracle-ads",
   "oracle-automlx==23.2.3",
   "pmdarima",
   "prophet",
