--- a/pyproject.toml
+++ b/pyproject.toml
@@ -175,6 +175,7 @@ forecast = [
   "shap",
   "sktime",
   "statsmodels",
+  "plotly",
 ]
 anomaly  = [
   "tods @ git+https://github.com/datamllab/tods.git"
