--- a/pyproject.toml
+++ b/pyproject.toml
@@ -168,7 +168,11 @@ forecast = [
   "shap",
   "sktime",
   "statsmodels",
-]
+],
+feature-store-marketplace = [
+    oracle-ads[opctl],
+    kubernetes
+],
 pii = [
   "aiohttp",
   "datapane",
