Fix version of onnx to be <1.15.0

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -107,9 +107,9 @@ notebook = [
 ]
 onnx = [
   "lightgbm",
-  "onnx>=1.12.0",
+  "onnx>=1.12.0,<1.15.0",  # v1.15.0 introduced ValueError: `initial_types` can not be detected.
   "onnxmltools>=1.10.0",
-  "onnxruntime>=1.10.0,<1.16",  # v1.16 introduced issues https://github.com/microsoft/onnxruntime/issues/17631, revealedd by unit tests
+  "onnxruntime>=1.10.0,<1.16",  # v1.16 introduced issues https://github.com/microsoft/onnxruntime/issues/17631, revealed by unit tests
   "oracle_ads[viz]",
   "protobuf<=3.20",
   "skl2onnx>=1.10.4",
