Fix version of lightgbm<4.0.0

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,7 +82,7 @@ bds = [
   "sqlalchemy",
 ]
 boosted = [
-  "lightgbm",
+  "lightgbm<4.0.0",  # relax when the official releases of skl2onnx (v1.16.0) and onnxmltools (1.11.3), https://github.com/sdpython/mlprodict/issues/488
   "xgboost",
 ]
 data = [
@@ -106,8 +106,8 @@ notebook = [
   "ipywidgets~=7.6.3",
 ]
 onnx = [
-  "lightgbm",
-  "onnx>=1.12.0,<1.15.0",  # v1.15.0 introduced ValueError: `initial_types` can not be detected.
+  "lightgbm<4.0.0",  # relax when the official releases of skl2onnx (v1.16.0) and onnxmltools (1.11.3), https://github.com/sdpython/mlprodict/issues/488
+  "onnx>=1.12.0",
   "onnxmltools>=1.10.0",
   "onnxruntime>=1.10.0,<1.16",  # v1.16 introduced issues https://github.com/microsoft/onnxruntime/issues/17631, revealed by unit tests
   "oracle_ads[viz]",
