--- a/pyproject.toml
+++ b/pyproject.toml
@@ -169,6 +169,9 @@ forecast = [
   "sktime",
   "statsmodels",
 ]
+anomaly  = [
+  "tods @ git+https://github.com/datamllab/tods.git"
+]
 pii = [
   "aiohttp",
   "datapane",
