--- a/pyproject.toml
+++ b/pyproject.toml
@@ -169,7 +169,7 @@ forecast = [
   "oci-cli",
   "optuna==2.9.0",
   "oracle-ads",
-  "oracle-automlx==23.2.3",
+  "oracle-automlx[forecasting]==23.2.3",
   "pmdarima",
   "prophet",
   "shap",
