Fix for hanging unit tests
- fixed typos

--- a/.github/workflows/run-unittests-py38-cov-report.yml
+++ b/.github/workflows/run-unittests-py38-cov-report.yml
@@ -88,7 +88,7 @@ jobs:
           ln -s ../.coveragerc .coveragerc
 
           "Run hpo tests, which hangs if run together with all unitary tests"
-          if [[ ${{ matrix.name ==  "unitary" }} ]]; then
+          if [[ ${{ matrix.name }} ==  "unitary" ]]; then
             python -m pytest -v -p no:warnings -n auto --dist loadfile \
             --cov-append --cov=ads --cov-report=xml --cov-report=html \
             tests/unitary/with_extras/hpo
