--- a/.github/workflows/run-unittests-py39-py310.yml
+++ b/.github/workflows/run-unittests-py39-py310.yml
@@ -42,9 +42,9 @@ jobs:
             # `forecast` tests not supported in python 3.9,3.10 (automlx dependency). Tests are running in python3.8 test env, see run-unittests-py38-cov-report.yml
             # 'hpo' tests hangs if run together with all unitary tests. Tests running in separate command before running all unitary
             ignore-path: |
-              --ignore tests/unitary/with_extras/model
-              --ignore tests/unitary/with_extras/feature_store
-              --ignore tests/unitary/with_extras/operator/forecast
+              --ignore tests/unitary/with_extras/model \
+              --ignore tests/unitary/with_extras/feature_store \
+              --ignore tests/unitary/with_extras/operator/forecast \
               --ignore tests/unitary/with_extras/hpo
           - name: "slow_tests"
             test-path: "tests/unitary/with_extras/model"
