--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,9 @@
 ## Check README-development.md and Makefile for instruction how to install or build ADS locally.
 
 [build-system]
-# These are the assumed default build requirements from pip:
-# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
 # PEP 517 – A build-system independent format for source trees - https://peps.python.org/pep-0517/
+# Till recently flit-core library was suggested by pip, so we used it. In future, cosider to change to
+# other, if better, build-backend library.
 requires = ["flit-core >=3.8,<4"]  # should specify <4, so won’t be impacted by changes in the next major version
 build-backend = "flit_core.buildapi"
 
