--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,7 +58,7 @@ dependencies = [
   "asteval>=0.9.25",
   "cerberus>=1.3.4",
   "cloudpickle>=1.6.0",
-  "fsspec>=0.8.7,<2023.9.1",  # v2.9.1 introduced issues, revealed by unit tests
+  "fsspec>=0.8.7",
   "gitpython>=3.1.2",
   "jinja2>=2.11.2",
   "matplotlib>=3.1.3",
