--- a/pyproject.toml
+++ b/pyproject.toml
@@ -176,6 +176,7 @@ forecast = [
   "sktime",
   "statsmodels",
   "plotly",
+  "report_creator @ git+https://github.com/darenr/report_creator.git",
 ]
 pii = [
   "aiohttp",
