--- a/.github/workflows/run-unittests-py38-cov-report.yml
+++ b/.github/workflows/run-unittests-py38-cov-report.yml
@@ -73,7 +73,7 @@ jobs:
           pip install -e ".[forecast]"
       - name: "Install featurestore marketplace dependencies"
         run: |
-          pip install -e ".[feature-store-marketplace]
+          pip install -e ".[feature-store-marketplace]"
       - name: "Run unitary tests folder with maximum ADS dependencies"
         timeout-minutes: 40
         shell: bash
