test secrets operator

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,11 +35,11 @@ repos:
           - id: rst-inline-touching-normal
             files: ^docs/
     # Hardcoded secrets and ocids detector
-#    - repo: https://github.com/gitleaks/gitleaks
-#      rev: v8.17.0
-#      hooks:
-#          - id: gitleaks
-#            exclude: .github/workflows/reusable-actions/set-dummy-conf.yml
+    - repo: https://github.com/gitleaks/gitleaks
+      rev: v8.18.1
+      hooks:
+          - id: gitleaks
+            exclude: .github/workflows/reusable-actions/set-dummy-conf.yml
     # Oracle copyright checker
     - repo: https://github.com/oracle-samples/oci-data-science-ai-samples/
       rev: 1bc5270a443b791c62f634233c0f4966dfcc0dd6
