--- a/.github/workflows/run-unittests-py39-py310.yml
+++ b/.github/workflows/run-unittests-py39-py310.yml
@@ -2,6 +2,8 @@ name: "[Py3.9][Py3.10] - tests/unitary/**"
 
 on:
   workflow_dispatch:
+  push:
+    branches: [ "main" ]
   pull_request:
     types: [opened, reopened]
     branches: [ "main" ]
