--- a/.github/workflows/run-unittests-py38-cov-report.yml
+++ b/.github/workflows/run-unittests-py38-cov-report.yml
@@ -151,7 +151,6 @@ jobs:
           fi
 
       - name: "Calculate coverage diff"
-        if: always()
         run: |
           set -x # print commands that are executed
 
@@ -182,7 +181,7 @@ jobs:
 
       - name: "Add comment with cov diff to PR"
         uses: actions/github-script@v6
-        if: always()
+        if: github.event_name == 'pull_request'
         with:
           github-token: ${{ github.token }}
           script: |
