--- a/ads/opctl/operator/lowcode/anomaly/environment.yaml
+++ b/ads/opctl/operator/lowcode/anomaly/environment.yaml
@@ -8,5 +8,4 @@ dependencies:
       - datapane
       - cerberus
       - oracle-automlx==23.2.3
-      - "git+https://github.com/datamllab/tods.git"
-      - "git+https://github.com/oracle/accelerated-data-science.git@feature/anomaly#egg=oracle-ads"
+      - "oracle-ads[anomaly]"
