add oracledb depencency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -176,11 +176,14 @@ forecast = [
   "sktime",
   "statsmodels",
   "plotly",
+  "oracledb",
 ]
 anomaly  = [
   "tods @ git+https://github.com/datamllab/tods.git",
   "autots",
   "oracle-automlx[anomaly]==23.2.3",
+  "oracledb",
+  "datapane",
 ]
 pii = [
   "aiohttp",
