--- a/ads/opctl/operator/lowcode/anomaly/environment.yaml
+++ b/ads/opctl/operator/lowcode/anomaly/environment.yaml
@@ -8,4 +8,5 @@ dependencies:
       - datapane
       - cerberus
       - oracle-automlx==23.4.1
+      - oracle-automlx[classic]==23.4.1
       - "oracle-ads[anomaly]"
