--- a/ads/opctl/operator/lowcode/forecast/environment.yaml
+++ b/ads/opctl/operator/lowcode/forecast/environment.yaml
@@ -17,3 +17,4 @@ dependencies:
       - autots[additional]
       - optuna==2.9.0
       - oracle-automlx==23.4.1
+      - oracle-automlx[forecasting]==23.4.1
