--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,7 @@ dependencies = [
   "numpy>=1.19.2",
   "oci>=2.113.0",
   "ocifs>=1.1.3",
-  "pandas>1.2.1,<2.1",
+  "pandas>1.2.1",
   "psutil>=5.7.2",
   "python_jsonschema_objects>=0.3.13",
   "requests",
