--- a/ads/aqua/config/deployment_config.json
+++ b/ads/aqua/config/deployment_config.json
@@ -1,62 +1,83 @@
 {
   "CodeLlama-13b-Instruct-hf": {
     "shape": [
-      "VM.GPU.A10.1",
-      "VM.GPU.A10.2"
+      "VM.GPU.A10.2",
+      "BM.GPU.A10.4",
+      "BM.GPU4.8",
+      "BM.GPU.A100-v2.8"
     ]
   },
   "CodeLlama-34b-Instruct-hf": {
     "shape": [
-      "VM.GPU.A10.1",
-      "VM.GPU.A10.2"
+      "BM.GPU.A10.4",
+      "BM.GPU4.8",
+      "BM.GPU.A100-v2.8"
     ]
   },
-  "CodeLlama-7b-Instruct-hf": {
+  "CodeLlama-7b-Instruct-hf": {.2
     "shape": [
       "VM.GPU.A10.1",
       "VM.GPU.A10.2"
+      "BM.GPU.A10.4",
+      "BM.GPU4.8",
+      "BM.GPU.A100-v2.8"
     ]
   },
   "Llama-2-13b-hf": {
     "shape": [
-      "VM.GPU.A10.1",
-      "VM.GPU.A10.2"
+      "VM.GPU.A10.2",
+      "BM.GPU.A10.4",
+      "BM.GPU4.8",
+      "BM.GPU.A100-v2.8"
     ]
   },
   "Mistral-7B-Instruct-v0.1": {
     "shape": [
       "VM.GPU.A10.1",
-      "VM.GPU.A10.2"
+      "VM.GPU.A10.2",
+      "BM.GPU.A10.4",
+      "BM.GPU4.8",
+      "BM.GPU.A100-v2.8"
     ]
   },
   "Mistral-7B-v0.1": {
     "shape": [
       "VM.GPU.A10.1",
-      "VM.GPU.A10.2"
+      "VM.GPU.A10.2",
+      "BM.GPU.A10.4",
+      "BM.GPU4.8",
+      "BM.GPU.A100-v2.8"
     ]
   },
   "Mixtral-8x7B-Instruct-v0.1": {
     "shape": [
-      "VM.GPU.A10.1",
-      "VM.GPU.A10.2"
+      "BM.GPU4.8",
+      "BM.GPU.A100-v2.8"
     ]
   },
   "Mixtral-8x7B-v0.1": {
     "shape": [
-      "VM.GPU.A10.1",
-      "VM.GPU.A10.2"
+      "BM.GPU4.8",
+      "BM.GPU.A100-v2.8"
     ]
   },
   "falcon-7b": {
     "shape": [
       "VM.GPU.A10.1",
-      "VM.GPU.A10.2"
+      "VM.GPU.A10.2",
+      "BM.GPU.A10.4",
+      "BM.GPU4.8",
+      "BM.GPU.A100-v2.8"
     ]
   },
   "phi-2": {
     "shape": [
       "VM.GPU.A10.1",
-      "VM.GPU.A10.2"
+      "VM.GPU.A10.2",
+      "BM.GPU.A10.4",
+      "BM.GPU4.8",
+      "BM.GPU.A100-v2.8"
+
     ]
   }
 }
