--- a/ads/aqua/config/deployment_config.json
+++ b/ads/aqua/config/deployment_config.json
@@ -17,7 +17,7 @@
   "CodeLlama-7b-Instruct-hf": {
     "shape": [
       "VM.GPU.A10.1",
-      "VM.GPU.A10.2"
+      "VM.GPU.A10.2",
       "BM.GPU.A10.4",
       "BM.GPU4.8",
       "BM.GPU.A100-v2.8"
@@ -77,7 +77,6 @@
       "BM.GPU.A10.4",
       "BM.GPU4.8",
       "BM.GPU.A100-v2.8"
-
     ]
   }
 }
