--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,8 @@ dependencies = [
   "numpy>=1.19.2",
   "oci>=2.113.0",
   "ocifs>=1.1.3",
-  "pandas>1.2.1,<2.1",
+  "pandas>1.2.1; python_version<'3.9'", # starting pandas v2.1.0 requires-python = '>=3.9'
+  "pandas>2.2.0; python_version>='3.9'",
   "psutil>=5.7.2",
   "python_jsonschema_objects>=0.3.13",
   "requests",
