ODSC-54147. Uptake pandas dependency

--- a/.github/workflows/run-unittests-default_setup.yml
+++ b/.github/workflows/run-unittests-default_setup.yml
@@ -50,5 +50,7 @@ jobs:
           set -x # print commands that are executed
           $CONDA/bin/conda init
           source /home/runner/.bashrc
+          conda create --name myenv python=${{ matrix.python-version }}
+          conda activate myenv
           pip install -r test-requirements.txt
           conda list
