--- a/.github/workflows/test-env-setup/action.yml
+++ b/.github/workflows/test-env-setup/action.yml
@@ -14,6 +14,7 @@ runs:
         sudo apt-get install libkrb5-dev graphviz
         $CONDA/bin/conda init
         source /home/runner/.bashrc
-
+        conda create --name myenv python=${{ matrix.python-version }}
+        conda activate myenv
         pip install -r dev-requirements.txt
         conda list
