--- a/.github/workflows/test-env-setup/action.yml
+++ b/.github/workflows/test-env-setup/action.yml
@@ -13,7 +13,7 @@ runs:
         sudo apt update
         sudo apt-get install libkrb5-dev graphviz
         conda create --name myenv python=${{ matrix.python-version }}
-        $CONDA/bin/conda init
+        conda init
         conda activate myenv
         pip install -r dev-requirements.txt
         conda list
