--- a/.github/workflows/test-env-setup/action.yml
+++ b/.github/workflows/test-env-setup/action.yml
@@ -12,9 +12,9 @@ runs:
 
         sudo apt update
         sudo apt-get install libkrb5-dev graphviz
-        conda create --name myenv python=${{ matrix.python-version }}
-        conda init
-        source /home/runner/.bashrc
-        conda activate myenv
-        pip install -r dev-requirements.txt
+        conda create --name myenv python=${{ matrix.python-version }} && \
+        conda init && \
+        source /home/runner/.bashrc && \
+        conda activate myenv && \
+        pip install -r dev-requirements.txt && \
         conda list
