--- a/.github/workflows/run-unittests-default_setup.yml
+++ b/.github/workflows/run-unittests-default_setup.yml
@@ -48,9 +48,9 @@ jobs:
           NoDependency: True
         run: |
           set -x # print commands that are executed
-          conda create --name myenv python=${{ matrix.python-version }}
-          conda init
-          source /home/runner/.bashrc
-          conda activate myenv
-          pip install -r test-requirements.txt
+          conda create --name myenv python=${{ matrix.python-version }} && \
+          conda init && \
+          source /home/runner/.bashrc && \
+          conda activate myenv && \
+          pip install -r test-requirements.txt && \
           conda list
