--- a/.github/workflows/run-unittests-default_setup.yml
+++ b/.github/workflows/run-unittests-default_setup.yml
@@ -43,14 +43,12 @@ jobs:
 
       - name: "Run default_setup tests folder ONLY with minimum ADS dependencies"
         timeout-minutes: 15
-        shell: bash
+        shell: bash -l {0}
         env:
           NoDependency: True
         run: |
           set -x # print commands that are executed
-          conda create --name myenv python=${{ matrix.python-version }} && \
-          conda init && \
-          source /home/runner/.bashrc && \
-          conda activate myenv && \
-          pip install -r test-requirements.txt && \
+          conda create --name myenv python=${{ matrix.python-version }}
+          conda activate myenv
+          pip install -r test-requirements.txt
           conda list
