ODSC-54147. Uptake pandas dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -174,7 +174,7 @@ dev = [
   "dask==2024.3.0; python_version>='3.9'",
   "cohere==4.53",
   "fastparquet==2024.2.0",
-  "fastavro<2.0,>=1.8",  # cohere 4.53 depends on fastavro<2.0 and >=1.8
+  "fastavro==1.8",  # cohere 4.53 depends on fastavro<2.0 and >=1.8
 ]
 
 [project.urls]
