--- a/.github/workflows/run-unittests-py39-py310.yml
+++ b/.github/workflows/run-unittests-py39-py310.yml
@@ -26,8 +26,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10"]
-        name: ["unitary", "slow_tests"]
+        python-version: ["3.9"]
+        name: ["unitary"]
         include:
           - name: "unitary"
             test-path: "tests/unitary"
