--- a/pyproject.toml
+++ b/pyproject.toml
@@ -132,7 +132,6 @@ forecast = [
   "inflection",
   "nbconvert",
   "nbformat",
-  "oci-cli",
   "py-cpuinfo",
   "rich",
   "autots[additional]",
@@ -140,7 +139,6 @@ forecast = [
   "holidays==0.21.13",
   "neuralprophet",
   "numpy",
-  "oci-cli",
   "optuna==2.9.0",
   "oracle-ads",
   "oracle-automlx[forecasting]==23.2.3",
@@ -173,7 +171,7 @@ aqua = ["fire", "cachetools"]
 # Revisit this section continuously to update to recent comaptible with python3.9/3.10 versions
 dev = [
   "dask==2023.5.0; python_version=='3.8'",
-  "dask==2024.3.0; python_version>='3.9'",
+  "dask==2023.10.1; python_version>='3.9'", # oci-cli depends on click==8.0.4, dask>2023.10.1 depends on "click>=8.1"
   "cohere==4.53",
   "fastparquet==2024.2.0",
   "fastavro==1.9.4",  # cohere 4.53 depends on fastavro<2.0 and >=1.8
