--- a/pyproject.toml
+++ b/pyproject.toml
@@ -121,7 +121,7 @@ tensorflow = ["oracle_ads[viz]", "tensorflow"]
 text = ["spacy", "wordcloud>=1.8.1"]
 torch = ["oracle_ads[viz]", "torch", "torchvision"]
 viz = [
-  "bokeh==2.4.3; extra='tests'",
+  "bokeh==2.4.3; extra=='tests'",
   "bokeh>=3.0.0, <3.2.0",
   "folium>=0.12.1",
   "graphviz<0.17",
