--- a/.github/workflows/test-env-setup/action.yml
+++ b/.github/workflows/test-env-setup/action.yml
@@ -14,5 +14,7 @@ runs:
         sudo apt-get install libkrb5-dev graphviz
         $CONDA/bin/conda init
         source /home/runner/.bashrc
-
-        pip install -r dev-requirements.txt
+        conda install python=${{ matrix.python-version }}
+        pip install -r test-requirements.txt
+        pip install -e ".[testsuite]"
+        conda list
