ODSC-54147. Uptake pandas dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -171,13 +171,12 @@ aqua = ["fire", "cachetools"]
 # Example, when added cohere==4.53, fastavro and pandavro version must be specifed to resolve conflcits.
 # Revisit this section continuously to update to recent comaptible versions with python3.9/3.10
 tests = [
+  "-e .[bds,data,geo,huggingface,llm,notebook,onnx,opctl,optuna,spark,tensorflow,text,torch,viz]",
   "dask==2023.5.0; python_version=='3.8'",
   "dask==2023.10.1; python_version>='3.9'", # oci-cli depends on click==8.0.4, dask>2023.10.1 depends on "click>=8.1"
   "cohere==4.53",
   "fastparquet==2024.2.0",
-  "fastavro==1.9.4",  # cohere 4.53 depends on fastavro<2.0 and >=1.8
-#  "pandavro==1.8.0",
-#  "category_encoders==2.6.3",
+  "category_encoders==2.6.3",
   "statsmodels; python_version=='3.8'",
   "statsmodels>=0.14.1; python_version>='3.9'",  # cython3.0 compatibility added in v0.14.1
 ]
