--- a/.github/workflows/test-env-setup/action.yml
+++ b/.github/workflows/test-env-setup/action.yml
@@ -14,5 +14,6 @@ runs:
         sudo apt-get install libkrb5-dev graphviz
         $CONDA/bin/conda init
         source /home/runner/.bashrc
-
+        conda install python=${{ matrix.python-version }}
         pip install -r dev-requirements.txt
+        conda list
